      and disable the sound support for the session to avoid
      session freezes.

  [ Robert Parts ]
  * New upstream version (4.1.1.0):
    - res/i18n/x2goclient_et.ts: update Estonian translation file.
    - res/i18n/x2goclient_et.ts: update Estonian translation file.

  [ Martti Pitkänen ]
  * New upstream version (4.1.1.0):
    - res/i18n/x2goclient_fi.ts: update Finnish translation file.

  [ Mike DePaulo ]
  * New upstream version (4.1.1.0):
    - Windows: Upgrade PulseAudio from 6.0 to 7.1
      Fixes: #1152 Issues with audio when playing HTML5 videos
    - Windows: Remove uninstaller from start menu.
      It is still available in "Programs and Features".
    - Windows: Upgrade Win32 OpenSSL from 1.0.1t to 1.0.2k
      Fixes numerous CVEs
    - Windows: Upgrade libssh from 0.7.0 to 0.7.4 (while maintaining
      Pageant support).
      The possibly relevant changes are:
        + CVE-2016-0739 was fixed
        + improved id_ed25519 support
        + numerous bug fixes
    - Windows: Update PuTTY from 0.67 to 0.68
      The possibly relevant changes are:
        + CVE-2016-6167 was fixed (did not affect X2Go Client by
          default because the installation dir is not writeable by
          users)
        + CVE-2017-6542 was fixed
    - Don't override PATH for the actual session or application
      command.
      Fixes: #1100

  [ Walid Moghrabi ]
  * New upstream version (4.1.1.0):
    - {src/{help.cpp,onmainwindow.{cpp,h}},man/man1/x2goclient.1}: let
      --background take a directory and randomly pick an SVG file in there.
      Fixes: #1165.
    - {src/{help.cpp,onmainwindow.{cpp,h}},man/man1/x2goclient.1}:
      pass-through broker credentials when connecting to a direct RDP session.
      Fixes: #1185.
      Adds a new  --broker-use-creds-for-session parameter.
    - src/onmainwindow.cpp: support --close-disconnect for direct RDP
      sessions. Fixes: #1186.

  [ Daniel Lindgren ]
  * New upstream version (4.1.1.0):